--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -184,9 +184,14 @@ height: 6em;
 <span><a href="/aboutus.html"> About Us</a></span>
    <span><a href="http://travel.ian.com/index.jsp?pageName=userAgreement&locale=en_US&cid=489058">Terms and Conditions</a></span>
 <br>
+
    <span>US and Canada: 1-800-780-5733 Europe: 00-800-11-20-11-40 Promo Code 489058</span>
 <br>
 <span> © 2015 HotelWherever™ All rights reserved.</span>
+<span>
+Ratings and Reviews Powered By <img style ="height:30px" src="http://www.tripadvisor.com/img/cdsi/langs/en/tripadvisor_logo_transp_280x60-MCID-0.png">
+</span>
+<span><a href="http://www.tripadvisor.com/pages/terms.html"> © Tripadvisor 2015</a></span>
 </div>
 
 
