--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -273,6 +273,15 @@ $("#filters").change();
     var peninsula = document.getElementById('peninsula').checked;
     var sorting = document.getElementById('sorting').value;
     var counter = document.getElementById('counter').value;
+     var us = document.getElementById('us').checked;
+    var canada = document.getElementById('canada').checked;
+    var europe = document.getElementById('europe').checked;
+    var latin = document.getElementById('latin').checked;
+    var asia = document.getElementById('asia').checked;
+    var africa = document.getElementById('africa').checked;
+    var australia = document.getElementById('australia').checked;
+    var middleeast = document.getElementById('middleeast').checked;
+    var southamerica = document.getElementById('southamerica').checked;
 
 
 var brandstring =[]
@@ -301,6 +310,19 @@ var brandstring =[]
      if(peninsula==1) {brandstring.push('2025');}
      if(lemeridian==1) {brandstring.push('87');}
 
+var regionstring =[]
+   if(asia==1) { regionstring.push('Middle East');}
+   if(us==1) { regionstring.push('Latin America and the Caribbean');}
+   if(southamerica==1) { regionstring.push('Africa');}
+   if(australia==1) { regionstring.push('Australia/Pacific');}
+   if(latin==1) { regionstring.push('Europe');}
+   if(europe==1) { regionstring.push('South America');}
+   if(africa==1) { regionstring.push('Canada');}
+   if(canada==1) { regionstring.push('US');}
+   if(middleeast==1) { regionstring.push('Asia');}
+
+
+
 
     var url = "/essentials/filter";
     var firstformtoggle = 0;
@@ -309,7 +331,7 @@ var brandstring =[]
       type: 'POST',
       url: url,
       dataType:'script',
-      data: {hotelhash: JSON.stringify(hotelhash),get_latlong:get_latlong,checkin:checkin,checkout:checkout,filterresults:numresults,pricea:pricea,priceb:priceb,pricec:pricec,priced:priced,pricee:pricee,pricef:pricef,firstformtoggle:firstformtoggle,brandstring:brandstring,chainid:chainid,whotels:whotels,hyatt:hyatt,waldorf:waldorf,fourseasons:fourseasons,hilton:hilton,radissonblu:radissonblu,renaissance:renaissance,sheraton:sheraton,stregis:stregis,westin:westin,boscolo:boscolo,renaissance:renaissance,fairmont:fairmont,intercontinental:intercontinental,jwmarriott:jwmarriott,lemeridian:lemeridian,mandarin:mandarin,marriott:marriott,melia:melia,shangra:shangra,sofitel:sofitel,starwoodlux:starwoodlux,langham:langham,peninsula:peninsula,coordarray:coordarray,centerlat:centerlat,centerlong:centerlong,sorting:sorting,counter:counter}
+      data: {hotelhash: JSON.stringify(hotelhash),get_latlong:get_latlong,checkin:checkin,checkout:checkout,filterresults:numresults,pricea:pricea,priceb:priceb,pricec:pricec,priced:priced,pricee:pricee,pricef:pricef,firstformtoggle:firstformtoggle,brandstring:brandstring,chainid:chainid,whotels:whotels,hyatt:hyatt,waldorf:waldorf,fourseasons:fourseasons,hilton:hilton,radissonblu:radissonblu,renaissance:renaissance,sheraton:sheraton,stregis:stregis,westin:westin,boscolo:boscolo,renaissance:renaissance,fairmont:fairmont,intercontinental:intercontinental,jwmarriott:jwmarriott,lemeridian:lemeridian,mandarin:mandarin,marriott:marriott,melia:melia,shangra:shangra,sofitel:sofitel,starwoodlux:starwoodlux,langham:langham,peninsula:peninsula,coordarray:coordarray,centerlat:centerlat,centerlong:centerlong,sorting:sorting,counter:counter,us:us,europe:europe,latin:latin,australia:australia,africa:africa,middleeast:middleeast,southamerica:southamerica,canada:canada,asia:asia,regionstring:regionstring}
     });
 });
 
